--- a/serie.html
+++ b/serie.html
@@ -77,7 +77,7 @@ body { margin:0; background:#000; color:#fff; font-family:Arial,sans-serif; padd
 
 <div id="commentsSection">
   <h3>Comments</h3>
-  <input id="usernameInput" placeholder="Enter a nickname (stored locally)">
+  <input id="usernameInput" placeholder="Enter your name">
   <textarea id="commentInput" placeholder="Write your comment"></textarea>
   <button id="commentBtn">Post Comment</button>
   <div id="commentMsg"></div>
